--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -2,53 +2,27 @@
 # DOMESTIC OFFERS
 ################################################################################
 
-- title: The Majestic Hotel
+- title: The Majestic Hote
   id: the-majestic-hotel
   location: Harrogate, North Yorkshire
   description: See Harrogate from a Victorian hotel with gorgeous gardens
   price: 119
   price-description: per room per night
   saved: 46
-  expires: 2019/06/18
+  expires: 2019/06/25
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90421/17f607ef_43de_4f44_9a95_2800914ce45c.jpg
   link: https://www.secretescapes.com/the-majestic-hotel-harrogate-north-yorkshire/sale
   sale-id: 94581
-  domestic: true
-
-- title: Mottram Hall
-  id: mottram-hall
-  location: Mottram St. Andrew, Cheshire
-  description: Kick back at an 18th-century Cheshire stay at a plush golf retreat
-  price: 149
-  price-description: per room per night
-  saved: 46
-  expires: 2019/06/18
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/80044/630e7105_a0ed_467c_a2e7_f4ae68ec2613.jpg
-  link: https://www.secretescapes.com/mottram-hall-mottram-st-andrew-cheshire/sale
-  sale-id: 94524
-  domestic: true
-
-- title: The Mandrake
-  id: the-mandrake
-  location: Fitzrovia, London
-  description: Boutique style and five-star elegance in London's Fitzrovia
-  price: 219
-  price-description: per room per night
-  saved: 57
-  expires: 2019/06/18
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/74357/01dc45ca_f10b_4d0f_bacf_1bb0635c2926.jpg
-  link: https://www.secretescapes.com/the-mandrake-fitzrovia-london/sale
-  sale-id: 94946
   domestic: true
 
 - title: No Man's Fort
   id: no-mans-fort
   location: Portsmouth, Hampshire
   description: Soak up a bucket-list sea fort stay in the Solent
-  price: 339
+  price: 305
   price-description: per room per night
-  saved: 24
-  expires: 2019/06/18
+  saved: 32
+  expires: 2019/06/20
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/42103/cccf48d1_5dc2_4639_b6b5_a0bcfc9e993d.jpg
   link: https://www.secretescapes.com/no-mans-fort-portsmouth-hampshire/sale
   sale-id: 94835
@@ -61,7 +35,7 @@
   price: 150
   price-description: per room per night
   saved: 24
-  expires: 2019/06/18
+  expires: 2019/06/21
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/72032/3716a151_1725_4172_8e43_4ed73285c12b.jpg
   link: https://www.secretescapes.com/retreat-east-hemingstone-suffolk/sale
   sale-id: 95374
@@ -74,7 +48,7 @@
   price: 148
   price-description: per room per night
   saved: 33
-  expires: 2019/06/18
+  expires: 2019/06/21
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91151/642aa356_fddd_413f_bd37_684a3a5ef2ff.jpg
   link: https://www.secretescapes.com/saltmarshe-hall-howden-east-yorkshire/sale
   sale-id: 95581
@@ -87,7 +61,7 @@
   price: 250
   price-description: per room per night
   saved: 37
-  expires: 2019/06/18
+  expires: 2019/06/25
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/48307/cb93ed68_8c56_4e74_9d3d_f1b84f71f107.jpg
   link: https://www.secretescapes.com/hoar-cross-hall-hoar-cross-staffordshire/sale
   sale-id: 95974
@@ -100,7 +74,7 @@
   price: 159
   price-description: per room per night
   saved: 42
-  expires: 2019/06/18
+  expires: 2019/06/25
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/69121/ac721a4e_31f8_4500_82b0_36a1b1e2b5b6.jpg
   link: https://www.secretescapes.com/grove-of-narberth-pembrokeshire-wales-uk/sale
   sale-id: 95729
@@ -113,7 +87,7 @@
   price: 89
   price-description: per room per night
   saved: 43
-  expires: 2019/06/18
+  expires: 2019/06/25
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/79309/24e7ec89_eabe_4385_9419_23fa8dda421d.jpg
   link: https://www.secretescapes.com/widbrook-grange-bradford-on-avon-wiltshire/sale
   sale-id: 95736
@@ -126,23 +100,10 @@
   price: 229
   price-description: per room per night
   saved: 41
-  expires: 2019/06/18
+  expires: 2019/06/25
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/71164/5afc88d0_452e_41fd_b9ec_92bf119b2e2c.jpg
   link: https://www.secretescapes.com/flemings-mayfair-mayfair-london-uk-sale/sale
   sale-id: 95940
-  domestic: true
-
-- title: New Road Hotel
-  id: new-road-hotel
-  location: Whitechapel, London
-  description: Chill out at an urban bolthole with an edgy stay in East London
-  price: 90
-  price-description: per room per night
-  saved: 36
-  expires: 2019/06/18
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95863/8077a4f0_e9e3_4544_a46c_2baff9ed2cef.jpg
-  link: https://www.secretescapes.com/new-road-hotel-whitechapel-london/sale
-  sale-id: 95863
   domestic: true
 
 - title: The Headland Hotel & Spa
@@ -175,7 +136,7 @@
   id: the-private-hill
   location: Malton, North Yorkshire
   description: Check into a new cutting-edge glamping dome in striking North Yorkshire
-  price: 146.5
+  price: 146
   price-description: per room per night
   saved: 25
   expires: 2019/06/25
@@ -197,6 +158,19 @@
   sale-id: 96306
   domestic: true
 
+- title: Champneys Henlow
+  id: champneys-henlow
+  location: Henlow, Bedfordshire
+  description: Relax with a healthy full-board stay at a Bedfordshire spa resort
+  price: 188
+  price-description: per room per night
+  saved: 46
+  expires: 2019/06/20
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/81648/0c717cb9_8520_4b20_94b3_30e2d22d11c7.jpg
+  link: https://www.secretescapes.com/champneys-henlow-henlow-bedfordshire/sale
+  sale-id: 96084
+  domestic: true
+
 - title: Danesfield House Hotel & Spa
   id: danesfield-house-hotel-and-spa
   location: Marlow, Buckinghamshire
@@ -208,30 +182,6 @@
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/86504/38cd8c6a_815c_4430_ae52_ab8b5479d734.jpg
   link: https://www.secretescapes.com/danesfield-house-hotel-and-spa-marlow-buckinghamshire/sale
   sale-id: 96136
-  domestic: true
-
-- title: The Crazy Bear Stadhampton
-  location: Stadhampton, Oxfordshire
-  description: An opulent Oxfordshire stay with Champagne, three course dinner and more
-  price: 138
-  price-description: Based on 2 people per room per night
-  saved: 60
-  expires: 2019/06/18
-  image: https://d2g6qre7voj6kv.cloudfront.net/sales/55524/1627294b_ba82_48cf_9685_a32dcefbe7dc.jpg?auto=format,compress
-  link: https://www.secretescapes.com/the-crazy-bear-stadhampton-stadhampton-oxfordshire/sale
-  sale-id: 94768
-  domestic: true
-
-- title: Champneys Henlow
-  location: Henlow, Bedfordshire
-  description: Relax with a healthy full-board stay at a Bedfordshire spa resort
-  price: 104
-  price-description: Based on 2 people per room per night
-  saved: 40
-  expires: 2019/06/25
-  image: https://d2g6qre7voj6kv.cloudfront.net/sales/81648/8c980f98_c802_476d_a644_5720cbd83b3f.jpg?auto=format,compress
-  link: https://www.secretescapes.com/champneys-henlow-henlow-bedfordshire/sale
-  sale-id: 96084
   domestic: true
 
 ################################################################################
@@ -290,18 +240,6 @@
   sale-id: 95798
   domestic: false
 
-- title: Hotel Jazz
-  location: Barcelona, Spain
-  description: A superbly placed Barcelona hotel near Las Ramblas
-  price: 43
-  price-description: Based on 2 people per room per night
-  saved: 42
-  expires: 2019/06/24
-  image: https://d2g6qre7voj6kv.cloudfront.net/sales/25434/8cf64809_0aac_4e51_8178_4ab2ff3619df.jpg?auto=format,compress
-  link: https://www.secretescapes.com/hotel-jazz-barcelona-spain/sale
-  sale-id: 95997
-  domestic: false
-
 - title: Castillo de Monda
   id: castillo-de-monda
   location: Málaga, Spain
@@ -336,7 +274,7 @@
   price-description: per room per night
   saved: 35
   expires: 2019/06/24
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/34119/c625d16f_c89e_4e5b_9f4e_c12385435d48.jpg
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/5784/a398003f_a6d1_46de_8e2f_a3c6f1f19371.jpg
   link: https://www.secretescapes.com/hospes-puerta-de-alcala-madrid-spain/sale
   sale-id: 96148
   domestic: false
@@ -374,7 +312,7 @@
   price: 51
   price-description: per room per night
   saved: 35
-  expires: 2019/06/25
+  expires: 2019/06/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/19285/8640d351_200a_4192_be80_51ea16fe2653.jpg
   link: https://www.secretescapes.com/mari-del-sud-resort-and-village-sicily-italy/sale
   sale-id: 96070
@@ -387,7 +325,7 @@
   price: 107
   price-description: per suite per night
   saved: 33
-  expires: 2019/06/25
+  expires: 2019/06/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/64792/0dbbdf83_b334_4263_9cc1_23c52b60a647.jpg
   link: https://www.secretescapes.com/savona-18-suites-milan-italy-uk/sale
   sale-id: 96299
@@ -400,7 +338,7 @@
   price: 111
   price-description: per suite per night
   saved: 36
-  expires: 2019/06/25
+  expires: 2019/06/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/96310/5b7810ad_b5d3_4e26_8ff1_40df7f2a28d1.jpg
   link: https://www.secretescapes.com/san-michele-procida-procida-italy/sale
   sale-id: 96310
@@ -413,7 +351,7 @@
   price: 106
   price-description: per room per night
   saved: 32
-  expires: 2019/06/25
+  expires: 2019/06/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/47875/96e1fc6b_13d5_4473_902e_a62b4a868981.jpg
   link: https://www.secretescapes.com/clarion-collection-hotel-folketeateret-oslo-norway/sale
   sale-id: 95849
@@ -426,7 +364,7 @@
   price: 166
   price-description: per room per night
   saved: 34
-  expires: 2019/06/25
+  expires: 2019/06/24
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/21946/39c69634_6f37_4682_9538_85ae62af4b79.jpg
   link: https://www.secretescapes.com/smaadalaro-gaard-dalaro-sweden/sale
   sale-id: 95414
